[FIX] Lottery saying noone entered even though someone has won
[FIX] Hints about jailtime and money printer saying 0 every time.
[FIX] ULX fuckups: Error and pocket jail
[FIX] Scoreboard kick and ban not working
[FIX] Gunlab exploit to get free guns
[FIX] Sleep and get unarrested bug
[FIX] Being able to set name to world prop
[FIX] Vehicle exploit where you can go through walls with pods
[CHANGE] Default shipments are now in addshipments.lua
[CHANGE] Moved complicated code in shared.lua and addshipments.lua to MakeThings.lua
[CHANGE] Changed filename of addshipments.lua to addentities.lua
[CHANGE] People now can't use wanted as an ESP, you will only see someone is wanted if he is in your sight. This way it won't be abused to find players.
[CHANGE] People now drop everything in pocket when they die.
[CHANGE] Medic gun world model to package, so it doesn't look like he's about to blow you up
[REMOVE] Simple Prop protection. You have served us well, goodbye.
[REMOVE] RunConsoleCommand override

DarkRP 2.3.7
Updated by: FPtje Falco

[ADD] /demote <reason> People need to specify a reason to demote
[ADD] rp_needwantedforarrest to prevent cops from random arresting
[ADD] /channel and /radio command: Set your radio to a channel and talk through the radio so everyone with the same channel hears you.
[ADD] Hobo's can make zombie sounds by right clicking with the bugbait :P -- idea thanks to GoDNeSS
[ADD] Eating food makes the TF2 nom sound(bad luck if you don't have TF2)
[ADD] Poo and pee mod :D enable with rp_poopeemod 1
[ADD] Anti slobbot server crash
[ADD] Weapon checker for the cops, chief and admin
[ADD] New, more subtle and easier to find easter egg.
[ADD] /wake and /wakeup command :)
[ADD] Gun license, people need a license to be able to pick up guns(toggle with rp_license 1/0)
[ADD] rp_allow<custom team> 1/0
[ADD] Message when trying to spawn a banned prop
[ADD] Pocket swep, store things temporarilly! (rp_pocket to turn on/off)
[ADD] Sleeping players can get hurt