@@ -1,0 +1,5 @@
+include("shared.lua")
+
+function ENT:Draw()
+	self.Entity:DrawModel()
+end
